<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARcowabungaproject</string>
    <string name="action_settings">Settings</string>
    <string name="third_D_view">3D View!</string>
    <string name="pizza_icon">Pizza icon</string>
    <string name="show_more">show more &#9660;</string>
    <string name="menu">MENU</string>
    <string name="menu_actual_order">ACTUAL ORDER</string>
    <string name="menu_contact">CONTACT</string>
    <string name="menu_last_orders">LAST ORDERS</string>
    <string name="content_description_img">iconmenu</string>
    <string name="or_choose" >OR CHOOSE ONE OF THIS</string>
    <string name="create_your_own_pizza" >CREATE YOUR OWN PIZZA</string>
    <string name="create_your_own_pizza_desc" >To your taste with your favorite ingredients and your preferred mass!</string>
    <string name="tab_pizza">PIZZAS</string>
    <string name="tab_drinks">DRINKS</string>
    <string name="tab_offers">OFFERS</string>
    <string name="products">PRODUCTS</string>
    <string name="additional_ingredents">Additional ingredients:</string>
    <string name="cursor_down">&#9660;</string>
    <string name="cursor_up">&#9650;</string>
    <string name="redo_order">MAKE ORDER AGAIN</string>
    <string name="about_us">About Us: we are the fucking best awesome pizzeria in the fucking worl.. no, wait. The fucking universe!</string>
    
    <!-- List Views -->
    
    <!-- Shopping cart layout -->
    <string name="remeber_advertice_title">REMEMBER!</string>
    <string name="remeber_advertice_message">FREE Shipping over 15€!</string>
    <string name="extra_ingredient_in_product_item">Suplemento ingredientes extra</string>
    <string name="total_text">TOTAL</string>
    <string name="total_price">30,70€</string>
    <string name="subtotal_text">SUBTOTAL</string>
    <string name="subtotal_value">25,35€</string>
    <string name="taxes_text">+ 21% de IVA</string>
    <string name="taxes_value">5,35€</string>
    <string name="shipping_cost_text">+ Gastos de envio</string>
    <string name="shipping_cost_value">0,00€</string>
    <string name="shipping_begin_value">(0) 0,00€</string>
    <string name="shipping_leftbutton_moreitems">ADD MORE ITEMS</string>
    <string name="shipping_rightbutton_makeorder">MAKE ORDER</string>
    
    <!-- Image Content Descriptions -->
    <string name="chef_icon">Chef Icon</string>
    <string name="basket_icon">Basket Icon</string>
    
    <!-- End Layout Buttons -->
    <string name="button_price">32,00€</string>
    
    <!-- Contact Activity -->
    <string name="contact_telephone">TELEPHONE: 93 666 666</string>
    <string name="contact_address">ADDRESS: C/ Gran vía del calamar, 666, 2, 00069 Barcelona</string>
    <string name="contact_email">E-MAIL: jodertio@chicote.com</string>
    <string name="contact_wood_oven">WOOD OVEN</string>
    <string name="contact_quality_gourmet">QUALITY GOURMET</string>
    <string name="contact_italian_chef">ITALIAN CHEF</string>
    <string name="contact_satisfaction">SATISFACTION 100%</string>
    
</resources>

