<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/home_image"
            android:contentDescription="@string/content_description_img" />

        <TextView
            android:id="@+id/contact_text_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/contact_item_first"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_wood_oven"
            android:drawableTop="@drawable/ic_launcher"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_margin="5dp" />
        
        <TextView
            android:id="@+id/contact_item_second"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_quality_gourmet"
            android:drawableTop="@drawable/ic_launcher"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_margin="5dp" />
        
        <TextView
            android:id="@+id/contact_item_third"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_italian_chef"
            android:drawableTop="@drawable/ic_launcher"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:gravity="center"
            android:layout_margin="5dp" />
        
        <TextView
            android:id="@+id/contact_item_four"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/contact_satisfaction"
            android:drawableTop="@drawable/ic_launcher"
            android:textColor="@color/red"
            android:textSize="11sp"
            android:gravity="center" 
            android:layout_margin="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/light_cyan"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_text_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_telephone"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:id="@+id/contact_text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_address"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:id="@+id/contact_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_email"
            android:textColor="@android:color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"/>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/red"
        android:gravity="center"
        android:clickable="true" >

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/menu"
            android:src="@drawable/iconmenulist" />

        <TextView
            android:id="@+id/contact_text_menu_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/menu"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>