<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/makeYourPizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e73445"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/create_your_own_pizza"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/create_your_own_pizza_desc"
            android:textSize="12sp"
            android:textColor="@android:color/white"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_choose" />

    <ListView
        android:id="@+id/pizzaList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </ListView>

</LinearLayout>