<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/blueSubtotalInOrderEndingSubItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#01DFD7" >

        <TextView
            android:id="@+id/subtotalTextInOrderEndingSubItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/subtotalPriceInOrderEndingSubItem"
            android:text="@string/subtotal_text"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@id/subtotalPriceInOrderEndingSubItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="subtotal"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/taxasTextInOrderEndingSubItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/blueSubtotalInOrderEndingSubItem"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/taxes_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/taxasValueInOrderEndingSubItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/blueSubtotalInOrderEndingSubItem"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="taxa"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/shippingCostTextInOrderEndingSubItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/taxasTextInOrderEndingSubItem"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/shipping_cost_text"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/shippingCostValueInOrderEndingSubItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/taxasTextInOrderEndingSubItem"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:text="envio"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <View
        android:id="@+id/separatorTotalBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/shippingCostTextInOrderEndingSubItem"
        android:layout_marginTop="20dp"
        android:background="#FF3333" />

    <TextView
        android:id="@+id/totalTextInOrderEndingSubItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/separatorTotalBottom"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/total_text"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/totalValueInOrderEndingSubItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/separatorTotalBottom"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/total_price"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/buttonInOrderEndingSubItem"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/totalTextInOrderEndingSubItem"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="#e73445"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/pizza_icon"
            android:paddingRight="5dp"
            android:src="@drawable/iconactualorder" />

        <TextView
            android:id="@+id/textButtonInPizzaSubItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo_order"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>