<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/remeberAdvertice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#888888"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/chef_icon"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/chef_icon"
            android:scaleType="fitXY"
            android:src="@drawable/home_image" />

        <TextView
            android:id="@+id/remember_advertice_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/chef_icon"
            android:text="@string/remeber_advertice_title"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remember_advertice_title"
            android:layout_toRightOf="@id/chef_icon"
            android:text="@string/remeber_advertice_message"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </RelativeLayout>

     <ListView
         android:id="@+id/pizzaList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
     </ListView>
    
   <!-- BUTTONS -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="#EE4052"
        android:baselineAligned="false"
        android:clickable="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/button_menu"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/buton_menu_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/menu"
                android:src="@drawable/iconmenulist" />

            <TextView
                android:id="@+id/buton_menu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/menu"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_cart"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:gravity="center" >

            <ImageView
                android:id="@+id/buton_cart_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/menu"
                android:src="@drawable/iconactualorder" />

            <TextView
                android:id="@+id/button_cart_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/shipping_begin_value"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>